--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,5 @@ linetwo: <a href="http://blog.hcr2.info">Log</a> - <a href="http://tips.hcr2.inf
 buttonone: <a href="https://ref.hcr2info.com">Reference <strong>hcr2.info</strong></a>
 buttontwo: <a href="#top">Page <strong>top</strong> </a>
 buttonthree: <a href="#bottom">Page <strong>bottom</strong></a>
-footerone:  <a href="#bottom"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/></a>
+footerone:  <a href="#top"><img src="https://cdn.discordapp.com/attachments/806343355264401478/820076457690398751/GBG-team-logo-125.png" alt="Gas Brake Go"/></a>
 footertwo:  <a href="mailto:dadahcr2@gmail.com">dadahcr2@gmail.com</a> ~ dada#1710
