--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: <center> <a href="#bottom"><img src="https://media.discordapp.net/a
 google_analytics: G-SFJ80L12D6
 linezero: <a href="#top"><img src="https://media.discordapp.net/attachments/806343355264401478/844297128007303198/Image.png?width=125&height=110" alt=""></a>
 lineone: <strong><a href="http://fw.hcr2.info">Friendly Wars</a> - <a href="http://tw.hcr2.info">Tractor Wars</a> - <a href="http://vehicles.hcr2.info">Vehicles</a></strong>
-linetwo: <a href="http://blog.hcr2.info" style="color: red">Log</a> - <a href="http://tips.hcr2.info">Tips</a> - <a href="http://chests.hcr2.info">Chests</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="http://gm.hcr2.info">GM</a> - <a href="http://faq.hcr2.info">FAQ</a>
+linetwo: <a href="http://blog.hcr2.info">Log</a> - <a href="http://tips.hcr2.info">Tips</a> - <a href="http://chests.hcr2.info">Chests</a> - <a href="http://memes.hcr2.info">Memes</a> - <a href="http://gm.hcr2.info">GM</a> - <a href="http://faq.hcr2.info">FAQ</a>
 buttonone: <a href="https://ref.hcr2info.com">Reference <strong>hcr2.info</strong></a>
 buttontwo: <a href="#top">Page <strong>top</strong> </a>
 buttonthree: <a href="#bottom">Page <strong>bottom</strong></a>
